--- a/codalab/apps/web/static/less/main.less
+++ b/codalab/apps/web/static/less/main.less
@@ -285,7 +285,7 @@ input[type="radio"], input[type="checkbox"] {
 This code is for 768px and up
 */
 @media screen and (min-width: @screen-sm-min) {
-    .competition-tile {
+    .homepage-competition-tile {
         height: 110px;
         .row{
             height: 95%;
@@ -300,11 +300,11 @@ This code is for 768px and up
     }
 }
 
-/*
-This cde is for 992px and up
-*/
+
+// This cde is for 992px and up
+
 @media screen and (min-width: @screen-md-min) {
-    .competition-tile {
+    .homepage-competition-tile {
         height: 110px;
         .row{
           height: 95%;
