--- a/codalab/apps/web/templates/web/competition_latest.html
+++ b/codalab/apps/web/templates/web/competition_latest.html
@@ -5,7 +5,7 @@
 {% load static %}
 {% load humanize %}
 
-<div class="competition-tile">
+<div class="competition-tile homepage-competition-tile">
 	<input id="competitionID" type="hidden" value="{{ competition.id }}" />
 	<div class="row">
 		<div class="col-sm-2 col-md-2">
