--- a/codalab/apps/web/templates/web/competitions/submission_metadata.html
+++ b/codalab/apps/web/templates/web/competitions/submission_metadata.html
@@ -9,7 +9,14 @@
 {% block content %}
 <div class="submissions">
     <div class="well submission-phase-select">
-        <h4>Phase</h4>
+        <div class="row">
+            <div class="col-md-6">
+                <h4>Phase</h4>
+            </div>
+            <div class="col-md-6">
+                <a href="{% url "competitions:view" pk=competition.pk %}" class="pull-right" >Go Back to Competition Homepage</a>
+            </div>
+        </div>
         <select id="phase_selector" class="form-control">
             {% for phase in competition.phases.all %}
                 <option {% if phase == selected_phase %}selected{% endif %} value="{{ phase.pk }}">{{ phase.label }} - {{ phase.start_date|utc }} UTC</option>
