manually fix imports.css

--- a/codalab/apps/web/static/css/imports.css
+++ b/codalab/apps/web/static/css/imports.css
@@ -7458,9 +7458,36 @@ input[type="checkbox"] {
 .already-disliked {
   color: red;
 }
+/* MANUALLY ADDED
+TODO: add this to LESS;
+************************/
+.editable-field:hover {
+    cursor: text;
+    border-radius: 4px;
+    box-shadow: 1px 1px 1px 1px grey;
+}
+.editable-error-block {
+  font-size: 16px
+}
+#worksheet-editor {
+        margin: 0
+        position: relative;
+        top: 0;
+        bottom: 0;
+        left: 0;
+        right: 0;
+        width: 1000px;
+        height: 700px;
+}
+.frontpage_code {
+  font-family: monospace;
+  font-size: 14px;
+  color: #33aa33;
+}
+/*************************/
 /* Everything below correspondes to the latest homepage*/
 .col-sm-6 .btn-group .btn-group a {
-  color: #FFFFFF;
+  color: #777777;
   font-weight: bold;
   font-size: 18px;
 }
@@ -7472,7 +7499,6 @@ input[type="checkbox"] {
   /* Opera 10.5, IE 9, Safari 5, Chrome, Firefox 4, iOS 4, Android 2.1+ */
   border-radius: 10px;
   background: #FFC266;
-  border: 1px solid;
 }
 .homepage_headers {
   color: #739cb9;
@@ -8038,7 +8064,7 @@ fieldset[disabled] #worksheet_content .header-row .controls .edit-features .btn-
   pointer-events: none;
   -ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=65)";
   filter: alpha(opacity=65);
-  opacity: 0.65;
+  background-color: #A9A9A9;
   -webkit-box-shadow: none;
   box-shadow: none;
 }
@@ -8060,24 +8086,6 @@ fieldset[disabled] #worksheet_content .header-row .controls .edit-features .btn-
 #worksheet_content .header-row .controls .edit-features .btn-group button.active,
 .open > .dropdown-toggle#worksheet_content .header-row .controls .edit-features .btn-group button {
   background-image: none;
-}
-#worksheet_content .header-row .controls .edit-features .btn-group button.disabled,
-#worksheet_content .header-row .controls .edit-features .btn-group button[disabled],
-fieldset[disabled] #worksheet_content .header-row .controls .edit-features .btn-group button,
-#worksheet_content .header-row .controls .edit-features .btn-group button.disabled:hover,
-#worksheet_content .header-row .controls .edit-features .btn-group button[disabled]:hover,
-fieldset[disabled] #worksheet_content .header-row .controls .edit-features .btn-group button:hover,
-#worksheet_content .header-row .controls .edit-features .btn-group button.disabled:focus,
-#worksheet_content .header-row .controls .edit-features .btn-group button[disabled]:focus,
-fieldset[disabled] #worksheet_content .header-row .controls .edit-features .btn-group button:focus,
-#worksheet_content .header-row .controls .edit-features .btn-group button.disabled:active,
-#worksheet_content .header-row .controls .edit-features .btn-group button[disabled]:active,
-fieldset[disabled] #worksheet_content .header-row .controls .edit-features .btn-group button:active,
-#worksheet_content .header-row .controls .edit-features .btn-group button.disabled.active,
-#worksheet_content .header-row .controls .edit-features .btn-group button[disabled].active,
-fieldset[disabled] #worksheet_content .header-row .controls .edit-features .btn-group button.active {
-  background-color: #fafafa;
-  border-color: #ccc;
 }
 #worksheet_content .header-row .controls .edit-features .btn-group button .badge {
   color: #fafafa;
