--- a/codalab/apps/web/static/less/worksheets.less
+++ b/codalab/apps/web/static/less/worksheets.less
@@ -40,6 +40,11 @@ html, body, #worksheet_container {height:100%;}
    .transition(margin-top .35s ease);
    position:relative;
    height:100%;
+   .editable-field:hover {
+      cursor:text;
+      border-radius:4px;
+      box-shadow:1px 1px 1px 1px gray;
+   }
    #ws_search {
       position:fixed;
       width:100%;
@@ -244,27 +249,18 @@ html, body, #worksheet_container {height:100%;}
       text-align:center;
       display:none;
    }
+   .worksheet-title {
+      text-indent:0;
+      margin:0;
+      font-size:44px;
+      line-height:1.1em;
+      padding:5px 0 20px 15px;
+      min-height:60px;
+   }
    .worksheet-name {
+      font-size:14px;
       min-height:65px;
-      label input[type="checkbox"]{
-         margin-right:5px;
-      }
-      h1 {
-         text-indent:0;
-         margin:0;
-         font-size:44px;
-         line-height:1em;
-         padding-top:5px;
-         padding-left:65px;
-         min-height:60px;
-      }
-      .worksheet-author {
-         text-indent:65px;
-         font-size:14px;
-         margin-top:0;
-      }
-      .worksheet-permission {
-         text-indent:65px;
+      .worksheet-detail {
          font-size:12px;
          margin-top:0;
       }
