Put all hacks into Less

--- a/codalab/apps/web/static/less/main.less
+++ b/codalab/apps/web/static/less/main.less
@@ -56,6 +56,10 @@ body {
     background-position: 10px 15px;
     padding-left:32px;
 }
+// Error
+.editable-error-block {
+   font-size:16px;
+}
 // Tabs
 .tab-content > .tab-pane {
    background-color:white;
