--- a/codalab/apps/web/static/less/worksheets.less
+++ b/codalab/apps/web/static/less/worksheets.less
@@ -778,6 +778,17 @@ html, body, #worksheet_container {height:100%;}
    }
 }
 
+// Worksheet Editor
+#worksheet-editor {
+   margin: 0
+   position: relative;
+   top: 0;
+   bottom: 0;
+   left: 0;
+   right: 0;
+   width: 1000px;
+   height: 700px;
+}
 
 // Keyboard Shortcut Glossary
 #glossaryModal {
