--- a/codalab/apps/web/static/less/main.less
+++ b/codalab/apps/web/static/less/main.less
@@ -339,3 +339,9 @@ This code is for 768px and up
         padding-left:5px;
     }
 }
+
+.frontpage_code {
+   font-family: monospace;
+   font-size: 14px;
+   color: #33aa33;
+}
