Minor edits to match the actual CSS.

--- a/codalab/apps/web/static/less/main.less
+++ b/codalab/apps/web/static/less/main.less
@@ -199,7 +199,7 @@ input[type="radio"], input[type="checkbox"] {
 
 /* Everything below correspondes to the latest homepage*/
 .col-sm-6 .btn-group .btn-group a{
-    color:#FFFFFF;
+    color:#777777;
     font-weight: bold;
     font-size: 18px;
 }
@@ -211,8 +211,6 @@ input[type="radio"], input[type="checkbox"] {
   /* Opera 10.5, IE 9, Safari 5, Chrome, Firefox 4, iOS 4, Android 2.1+ */
   border-radius: 10px;
   background: #FFC266;
-  border: 1px solid;
-
 }
 
 .homepage_headers{
