--- a/codalab/apps/web/static/less/worksheets.less
+++ b/codalab/apps/web/static/less/worksheets.less
@@ -780,7 +780,7 @@ html, body, #worksheet_container {height:100%;}
 
 // Worksheet Editor
 #worksheet-editor {
-   margin: 0
+   margin: 0;
    position: relative;
    top: 0;
    bottom: 0;
