--- a/codalab/apps/web/static/css/imports.css
+++ b/codalab/apps/web/static/css/imports.css
@@ -7338,6 +7338,9 @@ body.ws-interface > .container {
   background-position: 10px 15px;
   padding-left: 32px;
 }
+.editable-error-block {
+  font-size: 16px;
+}
 .tab-content > .tab-pane {
   background-color: white;
 }
@@ -7458,33 +7461,6 @@ input[type="checkbox"] {
 .already-disliked {
   color: red;
 }
-/* MANUALLY ADDED
-TODO: add this to LESS;
-************************/
-.editable-field:hover {
-    cursor: text;
-    border-radius: 4px;
-    box-shadow: 1px 1px 1px 1px grey;
-}
-.editable-error-block {
-  font-size: 16px
-}
-#worksheet-editor {
-        margin: 0
-        position: relative;
-        top: 0;
-        bottom: 0;
-        left: 0;
-        right: 0;
-        width: 1000px;
-        height: 700px;
-}
-.frontpage_code {
-  font-family: monospace;
-  font-size: 14px;
-  color: #33aa33;
-}
-/*************************/
 /* Everything below correspondes to the latest homepage*/
 .col-sm-6 .btn-group .btn-group a {
   color: #777777;
@@ -7693,6 +7669,11 @@ This code is for 768px and up
     padding-left: 5px;
   }
 }
+.frontpage_code {
+  font-family: monospace;
+  font-size: 14px;
+  color: #33aa33;
+}
 .panel-frame {
   margin-top: 12px;
   line-height: 1.2;
@@ -7770,6 +7751,11 @@ body,
   transition: margin-top 0.35s ease;
   position: relative;
   height: 100%;
+}
+#worksheet .editable-field:hover {
+  cursor: text;
+  border-radius: 4px;
+  box-shadow: 1px 1px 1px 1px gray;
 }
 #worksheet #ws_search {
   position: fixed;
@@ -7971,29 +7957,19 @@ body,
   text-align: center;
   display: none;
 }
-#worksheet_content .worksheet-name {
-  min-height: 65px;
-}
-#worksheet_content .worksheet-name label input[type="checkbox"] {
-  margin-right: 5px;
-}
-#worksheet_content .worksheet-name h1 {
+#worksheet_content .worksheet-title {
   text-indent: 0;
   margin: 0;
   font-size: 44px;
-  line-height: 1em;
-  padding-top: 5px;
-  padding-left: 65px;
+  line-height: 1.1em;
+  padding: 5px 0 20px 15px;
   min-height: 60px;
 }
-#worksheet_content .worksheet-name .worksheet-author {
-  text-indent: 65px;
+#worksheet_content .worksheet-name {
   font-size: 14px;
-  margin-top: 0;
+  min-height: 65px;
 }
-#worksheet_content .worksheet-name .worksheet-permission {
-  text-indent: 65px;
-  font-size: 12px;
+#worksheet_content .worksheet-name .worksheet-detail {
   margin-top: 0;
 }
 #worksheet_content .header-row hr {
@@ -8064,7 +8040,7 @@ fieldset[disabled] #worksheet_content .header-row .controls .edit-features .btn-
   pointer-events: none;
   -ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=65)";
   filter: alpha(opacity=65);
-  background-color: #A9A9A9;
+  opacity: 0.65;
   -webkit-box-shadow: none;
   box-shadow: none;
 }
@@ -8086,6 +8062,24 @@ fieldset[disabled] #worksheet_content .header-row .controls .edit-features .btn-
 #worksheet_content .header-row .controls .edit-features .btn-group button.active,
 .open > .dropdown-toggle#worksheet_content .header-row .controls .edit-features .btn-group button {
   background-image: none;
+}
+#worksheet_content .header-row .controls .edit-features .btn-group button.disabled,
+#worksheet_content .header-row .controls .edit-features .btn-group button[disabled],
+fieldset[disabled] #worksheet_content .header-row .controls .edit-features .btn-group button,
+#worksheet_content .header-row .controls .edit-features .btn-group button.disabled:hover,
+#worksheet_content .header-row .controls .edit-features .btn-group button[disabled]:hover,
+fieldset[disabled] #worksheet_content .header-row .controls .edit-features .btn-group button:hover,
+#worksheet_content .header-row .controls .edit-features .btn-group button.disabled:focus,
+#worksheet_content .header-row .controls .edit-features .btn-group button[disabled]:focus,
+fieldset[disabled] #worksheet_content .header-row .controls .edit-features .btn-group button:focus,
+#worksheet_content .header-row .controls .edit-features .btn-group button.disabled:active,
+#worksheet_content .header-row .controls .edit-features .btn-group button[disabled]:active,
+fieldset[disabled] #worksheet_content .header-row .controls .edit-features .btn-group button:active,
+#worksheet_content .header-row .controls .edit-features .btn-group button.disabled.active,
+#worksheet_content .header-row .controls .edit-features .btn-group button[disabled].active,
+fieldset[disabled] #worksheet_content .header-row .controls .edit-features .btn-group button.active {
+  background-color: #fafafa;
+  border-color: #ccc;
 }
 #worksheet_content .header-row .controls .edit-features .btn-group button .badge {
   color: #fafafa;
@@ -9249,6 +9243,16 @@ fieldset[disabled] #worksheet-list .worksheet-tile .worksheet-inner button.delet
   word-wrap: normal;
   white-space: pre;
   font-size: 80%;
+}
+#worksheet-editor {
+  margin: 0;
+  position: relative;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  width: 1000px;
+  height: 700px;
 }
 #glossaryModal .modal-header h4 {
   margin: 0;
