Edited a lot of styling

--- a/codalab/apps/web/static/less/cl-variables.less
+++ b/codalab/apps/web/static/less/cl-variables.less
@@ -18,6 +18,8 @@
 
 @focused-bg:            #fffef4;
 @focused-bg-alt:        #dfedf7;
+@glow-bg:               #e2f0f5;
+@glow-feather:          @glow-bg;
 
 @body-bg:               @white-dark;
 
