--- a/codalab/apps/web/static/less/actionbar.less
+++ b/codalab/apps/web/static/less/actionbar.less
@@ -9,6 +9,7 @@
   margin-left: auto;
   margin-right: auto;
   max-width:1700px;
+  background-color:inherit;
 }
 .terminal .terminal-output .format,
 .cmd .format,
