--- a/codalab/apps/web/static/less/worksheets.less
+++ b/codalab/apps/web/static/less/worksheets.less
@@ -115,9 +115,9 @@ html, body, #worksheet_container {height:100%;}
    }
    #worksheet_panel {
       .clearfix();
-      padding-top:@actionbar-blur-height;
+      padding-top:@actionbar-blur-height !important;
       &.actionbar-focus {
-         padding-top:@actionbar-focus-height;
+         padding-top:@actionbar-focus-height !important;
       }
       
    }
