--- a/codalab/apps/web/static/css/imports.css
+++ b/codalab/apps/web/static/css/imports.css
@@ -8216,7 +8216,8 @@ fieldset[disabled] #worksheet_content .header-row .controls .edit-features .btn-
 }
 #worksheet_content .type-markup h1,
 #worksheet_content .type-markup h2,
-#worksheet_content .type-markup h3 {
+#worksheet_content .type-markup h3,
+#worksheet_content .type-markup h4 {
   margin: .5em 0 12px;
   padding: 0;
   font-weight: bold;
