--- a/codalab/apps/web/static/less/worksheets.less
+++ b/codalab/apps/web/static/less/worksheets.less
@@ -363,7 +363,7 @@ html, body, #worksheet_container {height:100%;}
          margin-top:6px;
          margin-bottom:6px;
       }
-      h1, h2, h3 {
+      h1, h2, h3, h4 {
          margin:.5em 0 12px;
          padding:0;
          font-weight:bold;
