--- a/codalab/apps/web/static/less/worksheets.less
+++ b/codalab/apps/web/static/less/worksheets.less
@@ -4,6 +4,7 @@
 //@actionbar-blur-height: 45px + 20px;
 @actionbar-focus-height: 45px;
 @actionbar-blur-height: 45px;
+@item-margin-bottom: 20px;
 
 .panel-frame {
    margin-top:12px;
@@ -305,6 +306,7 @@ html, body, #worksheet_container {height:100%;}
    }
    .ws-item {
       position:relative;
+      margin-bottom:@item-margin-bottom;
       .ws-checkbox {
          margin:0;
          position:absolute;
@@ -342,16 +344,17 @@ html, body, #worksheet_container {height:100%;}
    // Bundle Types
    .type-markup {
       .clearfix;
-      line-height:@line-height-base;
-      p {
-         margin-bottom: 18px;
+      line-height:1.5;
+      // Margin for non-last children
+      > * {
+        margin-bottom:@item-margin-bottom;
+      }
+      > *:last-child {
+        margin-bottom: 0;
       }
       ul, ol {
-         margin: 0 0 16px 0;
+         margin: 0;
          padding-left:40px;
-         ul, ol {
-            margin-bottom:0;
-         }
       }
       ul {
          list-style-type:disc;
@@ -364,7 +367,7 @@ html, body, #worksheet_container {height:100%;}
          margin-bottom:6px;
       }
       h1, h2, h3, h4 {
-         margin:.5em 0 12px;
+         margin-top:.5em;
          padding:0;
          font-weight:bold;
       }
@@ -437,7 +440,7 @@ html, body, #worksheet_container {height:100%;}
       background-size:32px;
    }
    .type-table, .type-record, .type-search {
-      margin: 6px 45px 18px 0;
+      margin-right: 45px;
       display: inline-block;
       min-width: 100%;
       table {
