remove orangish tint from disabled button; fix disabled button color

--- a/codalab/apps/web/static/bootstrap/less/buttons.less
+++ b/codalab/apps/web/static/bootstrap/less/buttons.less
@@ -45,8 +45,8 @@
   fieldset[disabled] & {
     cursor: not-allowed;
     pointer-events: none; // Future-proof disabling of clicks
-    .opacity(.65);
     .box-shadow(none);
+    color: @btn-link-disabled-color;
   }
 }
 
