--- a/codalab/apps/web/static/css/imports.css
+++ b/codalab/apps/web/static/css/imports.css
@@ -9142,119 +9142,6 @@ fieldset[disabled] #worksheet-list .worksheet-tile .worksheet-inner button.delet
   cursor: pointer;
   color: #739cb9;
 }
-#bundle-content .bundle-tile .bundle-file-view-container .file-browser-table {
-  width: 100%;
-  max-width: 100%;
-  margin-bottom: 25px;
-  margin-bottom: 0;
-}
-#bundle-content .bundle-tile .bundle-file-view-container .file-browser-table > thead > tr > th,
-#bundle-content .bundle-tile .bundle-file-view-container .file-browser-table > tbody > tr > th,
-#bundle-content .bundle-tile .bundle-file-view-container .file-browser-table > tfoot > tr > th,
-#bundle-content .bundle-tile .bundle-file-view-container .file-browser-table > thead > tr > td,
-#bundle-content .bundle-tile .bundle-file-view-container .file-browser-table > tbody > tr > td,
-#bundle-content .bundle-tile .bundle-file-view-container .file-browser-table > tfoot > tr > td {
-  padding: 4px 6px;
-  line-height: 1.6;
-  vertical-align: top;
-  border-top: 1px solid #dddddd;
-}
-#bundle-content .bundle-tile .bundle-file-view-container .file-browser-table > thead > tr > th {
-  vertical-align: bottom;
-  border-bottom: 2px solid #dddddd;
-}
-#bundle-content .bundle-tile .bundle-file-view-container .file-browser-table > caption + thead > tr:first-child > th,
-#bundle-content .bundle-tile .bundle-file-view-container .file-browser-table > colgroup + thead > tr:first-child > th,
-#bundle-content .bundle-tile .bundle-file-view-container .file-browser-table > thead:first-child > tr:first-child > th,
-#bundle-content .bundle-tile .bundle-file-view-container .file-browser-table > caption + thead > tr:first-child > td,
-#bundle-content .bundle-tile .bundle-file-view-container .file-browser-table > colgroup + thead > tr:first-child > td,
-#bundle-content .bundle-tile .bundle-file-view-container .file-browser-table > thead:first-child > tr:first-child > td {
-  border-top: 0;
-}
-#bundle-content .bundle-tile .bundle-file-view-container .file-browser-table > tbody + tbody {
-  border-top: 2px solid #dddddd;
-}
-#bundle-content .bundle-tile .bundle-file-view-container .file-browser-table .table {
-  background-color: #f7f7f7;
-}
-#bundle-content .bundle-tile .bundle-file-view-container .file-browser-table > thead > tr > th,
-#bundle-content .bundle-tile .bundle-file-view-container .file-browser-table > tbody > tr > th,
-#bundle-content .bundle-tile .bundle-file-view-container .file-browser-table > tfoot > tr > th,
-#bundle-content .bundle-tile .bundle-file-view-container .file-browser-table > thead > tr > td,
-#bundle-content .bundle-tile .bundle-file-view-container .file-browser-table > tbody > tr > td,
-#bundle-content .bundle-tile .bundle-file-view-container .file-browser-table > tfoot > tr > td {
-  line-height: 1.34;
-}
-#bundle-content .bundle-tile .bundle-file-view-container .file-browser-table > thead > tr > th a .glyphicon,
-#bundle-content .bundle-tile .bundle-file-view-container .file-browser-table > tbody > tr > th a .glyphicon,
-#bundle-content .bundle-tile .bundle-file-view-container .file-browser-table > tfoot > tr > th a .glyphicon {
-  font-size: 14px;
-  padding-top: 3px;
-}
-#bundle-content .bundle-tile .bundle-file-view-container .file-browser-table > tbody > tr:nth-child(odd) > td,
-#bundle-content .bundle-tile .bundle-file-view-container .file-browser-table > tbody > tr:nth-child(odd) > th {
-  background-color: #ffffff;
-}
-#bundle-content .bundle-tile .bundle-file-view-container .file-browser-table > thead > tr > th,
-#bundle-content .bundle-tile .bundle-file-view-container .file-browser-table > tbody > tr > th,
-#bundle-content .bundle-tile .bundle-file-view-container .file-browser-table > tfoot > tr > th,
-#bundle-content .bundle-tile .bundle-file-view-container .file-browser-table > thead > tr > td,
-#bundle-content .bundle-tile .bundle-file-view-container .file-browser-table > tbody > tr > td,
-#bundle-content .bundle-tile .bundle-file-view-container .file-browser-table > tfoot > tr > td {
-  line-height: 1.2;
-  font-size: 14px;
-  border-width: 0;
-}
-#bundle-content .bundle-tile .bundle-file-view-container .file-browser-table > thead > tr > th a,
-#bundle-content .bundle-tile .bundle-file-view-container .file-browser-table > tbody > tr > th a,
-#bundle-content .bundle-tile .bundle-file-view-container .file-browser-table > tfoot > tr > th a,
-#bundle-content .bundle-tile .bundle-file-view-container .file-browser-table > thead > tr > td a,
-#bundle-content .bundle-tile .bundle-file-view-container .file-browser-table > tbody > tr > td a,
-#bundle-content .bundle-tile .bundle-file-view-container .file-browser-table > tfoot > tr > td a,
-#bundle-content .bundle-tile .bundle-file-view-container .file-browser-table > thead > tr > th span,
-#bundle-content .bundle-tile .bundle-file-view-container .file-browser-table > tbody > tr > th span,
-#bundle-content .bundle-tile .bundle-file-view-container .file-browser-table > tfoot > tr > th span,
-#bundle-content .bundle-tile .bundle-file-view-container .file-browser-table > thead > tr > td span,
-#bundle-content .bundle-tile .bundle-file-view-container .file-browser-table > tbody > tr > td span,
-#bundle-content .bundle-tile .bundle-file-view-container .file-browser-table > tfoot > tr > td span {
-  cursor: pointer;
-}
-#bundle-content .bundle-tile .bundle-file-view-container .file-browser-table > thead > tr > th .directory,
-#bundle-content .bundle-tile .bundle-file-view-container .file-browser-table > tbody > tr > th .directory,
-#bundle-content .bundle-tile .bundle-file-view-container .file-browser-table > tfoot > tr > th .directory,
-#bundle-content .bundle-tile .bundle-file-view-container .file-browser-table > thead > tr > td .directory,
-#bundle-content .bundle-tile .bundle-file-view-container .file-browser-table > tbody > tr > td .directory,
-#bundle-content .bundle-tile .bundle-file-view-container .file-browser-table > tfoot > tr > td .directory {
-  font-weight: bold;
-}
-#bundle-content .bundle-tile .bundle-file-view-container .file-browser-table > thead > tr > th .file,
-#bundle-content .bundle-tile .bundle-file-view-container .file-browser-table > tbody > tr > th .file,
-#bundle-content .bundle-tile .bundle-file-view-container .file-browser-table > tfoot > tr > th .file,
-#bundle-content .bundle-tile .bundle-file-view-container .file-browser-table > thead > tr > td .file,
-#bundle-content .bundle-tile .bundle-file-view-container .file-browser-table > tbody > tr > td .file,
-#bundle-content .bundle-tile .bundle-file-view-container .file-browser-table > tfoot > tr > td .file {
-  font-weight: normal;
-}
-#bundle-content .bundle-tile .bundle-file-view-container .file-browser-table > thead > tr > th .file .size,
-#bundle-content .bundle-tile .bundle-file-view-container .file-browser-table > tbody > tr > th .file .size,
-#bundle-content .bundle-tile .bundle-file-view-container .file-browser-table > tfoot > tr > th .file .size,
-#bundle-content .bundle-tile .bundle-file-view-container .file-browser-table > thead > tr > td .file .size,
-#bundle-content .bundle-tile .bundle-file-view-container .file-browser-table > tbody > tr > td .file .size,
-#bundle-content .bundle-tile .bundle-file-view-container .file-browser-table > tfoot > tr > td .file .size {
-  width: 5em;
-  float: right;
-  font-family: Menlo, Monaco, Consolas, "Courier New", monospace;
-  font-size: 80%;
-  line-height: 1.6;
-}
-#bundle-content .bundle-tile .bundle-file-view-container .file-browser-table .glyphicon {
-  font-size: 14px;
-  color: #739cb9;
-  margin-right: 6px;
-}
-#bundle-content .bundle-tile .bundle-file-view-container .file-browser-table .glyphicon.glyphicon-file {
-  color: #999999;
-}
 #bundle-content .bundle-tile .stdout-container,
 #bundle-content .bundle-tile .stderr-container {
   border-top: 1px solid #cccccc;
@@ -9265,6 +9152,119 @@ fieldset[disabled] #worksheet-list .worksheet-tile .worksheet-inner button.delet
   word-wrap: normal;
   white-space: pre;
   font-size: 80%;
+}
+.file-browser-table {
+  width: 100%;
+  max-width: 100%;
+  margin-bottom: 25px;
+  margin-bottom: 0;
+}
+.file-browser-table > thead > tr > th,
+.file-browser-table > tbody > tr > th,
+.file-browser-table > tfoot > tr > th,
+.file-browser-table > thead > tr > td,
+.file-browser-table > tbody > tr > td,
+.file-browser-table > tfoot > tr > td {
+  padding: 4px 6px;
+  line-height: 1.6;
+  vertical-align: top;
+  border-top: 1px solid #dddddd;
+}
+.file-browser-table > thead > tr > th {
+  vertical-align: bottom;
+  border-bottom: 2px solid #dddddd;
+}
+.file-browser-table > caption + thead > tr:first-child > th,
+.file-browser-table > colgroup + thead > tr:first-child > th,
+.file-browser-table > thead:first-child > tr:first-child > th,
+.file-browser-table > caption + thead > tr:first-child > td,
+.file-browser-table > colgroup + thead > tr:first-child > td,
+.file-browser-table > thead:first-child > tr:first-child > td {
+  border-top: 0;
+}
+.file-browser-table > tbody + tbody {
+  border-top: 2px solid #dddddd;
+}
+.file-browser-table .table {
+  background-color: #f7f7f7;
+}
+.file-browser-table > thead > tr > th,
+.file-browser-table > tbody > tr > th,
+.file-browser-table > tfoot > tr > th,
+.file-browser-table > thead > tr > td,
+.file-browser-table > tbody > tr > td,
+.file-browser-table > tfoot > tr > td {
+  line-height: 1.34;
+}
+.file-browser-table > thead > tr > th a .glyphicon,
+.file-browser-table > tbody > tr > th a .glyphicon,
+.file-browser-table > tfoot > tr > th a .glyphicon {
+  font-size: 14px;
+  padding-top: 3px;
+}
+.file-browser-table > tbody > tr:nth-child(odd) > td,
+.file-browser-table > tbody > tr:nth-child(odd) > th {
+  background-color: #ffffff;
+}
+.file-browser-table > thead > tr > th,
+.file-browser-table > tbody > tr > th,
+.file-browser-table > tfoot > tr > th,
+.file-browser-table > thead > tr > td,
+.file-browser-table > tbody > tr > td,
+.file-browser-table > tfoot > tr > td {
+  line-height: 1.2;
+  font-size: 14px;
+  border-width: 0;
+}
+.file-browser-table > thead > tr > th a,
+.file-browser-table > tbody > tr > th a,
+.file-browser-table > tfoot > tr > th a,
+.file-browser-table > thead > tr > td a,
+.file-browser-table > tbody > tr > td a,
+.file-browser-table > tfoot > tr > td a,
+.file-browser-table > thead > tr > th span,
+.file-browser-table > tbody > tr > th span,
+.file-browser-table > tfoot > tr > th span,
+.file-browser-table > thead > tr > td span,
+.file-browser-table > tbody > tr > td span,
+.file-browser-table > tfoot > tr > td span {
+  cursor: pointer;
+}
+.file-browser-table > thead > tr > th .directory,
+.file-browser-table > tbody > tr > th .directory,
+.file-browser-table > tfoot > tr > th .directory,
+.file-browser-table > thead > tr > td .directory,
+.file-browser-table > tbody > tr > td .directory,
+.file-browser-table > tfoot > tr > td .directory {
+  font-weight: bold;
+}
+.file-browser-table > thead > tr > th .file,
+.file-browser-table > tbody > tr > th .file,
+.file-browser-table > tfoot > tr > th .file,
+.file-browser-table > thead > tr > td .file,
+.file-browser-table > tbody > tr > td .file,
+.file-browser-table > tfoot > tr > td .file {
+  font-weight: normal;
+}
+.file-browser-table > thead > tr > th .file .size,
+.file-browser-table > tbody > tr > th .file .size,
+.file-browser-table > tfoot > tr > th .file .size,
+.file-browser-table > thead > tr > td .file .size,
+.file-browser-table > tbody > tr > td .file .size,
+.file-browser-table > tfoot > tr > td .file .size {
+  width: 5em;
+  float: right;
+  font-family: Menlo, Monaco, Consolas, "Courier New", monospace;
+  font-size: 80%;
+  line-height: 1.6;
+}
+.file-browser-table .glyphicon {
+  font-size: 14px;
+  color: #739cb9;
+  margin-right: 6px;
+}
+.file-browser-table .glyphicon.glyphicon-file {
+  color: #999999;
 }
 #worksheet-editor {
   margin: 0;
