Replace upload modal

--- a/codalab/apps/web/static/less/worksheets.less
+++ b/codalab/apps/web/static/less/worksheets.less
@@ -857,3 +857,12 @@ html, body, #worksheet_container {height:100%;}
       padding:0;
    }
 }
+
+// Hide upload form
+#bundle-upload-form {
+   display: none;
+}
+
+.bundle-upload-progress-bar {
+   width: 100%;
+}
