Revert "Merge pull request #1477 from pbhatnagar3/cl#1402-long-commands"
This reverts commit 30622fdc57e769a4c3fa0b58e06b5bb9989cfa6f, reversing
changes made to d537c0b89cd7715ad2adb2eb89a24d6543a96bf9.

--- a/codalab/apps/web/templates/web/worksheets/detail.html
+++ b/codalab/apps/web/templates/web/worksheets/detail.html
@@ -114,7 +114,7 @@
     <script src="{{ STATIC_URL }}js/vendor/underscore-min.js"></script>
     <script src="{{ STATIC_URL }}js/vendor/react-0.12.2.js"></script>
     <script src="{{ STATIC_URL }}js/vendor/jquery-editable-poshytip.js"></script>
-    <script src="{{ STATIC_URL }}js/vendor/jquery.terminal-0.9.0_dev.min.js"></script>
+    <script src="{{ STATIC_URL }}js/vendor/jquery.terminal-0.8.8.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-mousewheel/3.1.12/jquery.mousewheel.js"></script>
 
     {# TODO: remove JSX and move to deploy processing of JSX #}
