--- a/codalab/apps/web/static/less/actionbar.less
+++ b/codalab/apps/web/static/less/actionbar.less
@@ -101,7 +101,7 @@
     font-family: FreeMono, monospace;
     color: #223;
     background-color: #EFEFEF;
-    font-size: 11.5px;  // HACK: Reduced from 12px to help terminal wrap long lines properly
+    font-size: 12px;
     line-height: 14px;
 }
 .terminal-output > div {
