fix math again; pressing 'enter' on worksheet opens in same window

--- a/codalab/apps/web/templates/web/worksheets/detail.html
+++ b/codalab/apps/web/templates/web/worksheets/detail.html
@@ -66,7 +66,7 @@
                       <td><kbd>g g</kbd></td><td>Move to beginning of worksheet</td>
                     </tr>
                     <tr>
-                      <td><kbd>enter</kbd></td><td>Open current bundle or worksheet</td>
+                      <td><kbd>enter</kbd></td><td>Open current bundle or worksheet (shift: new window)</td>
                     </tr>
                     <tr>
                         <td><kbd>u</kbd></td><td>Paste UUID of current bundle or worksheet into web terminal</td>
