Fixing submission description. "resolves #1435"

--- a/codalab/apps/web/static/css/imports.css
+++ b/codalab/apps/web/static/css/imports.css
@@ -7672,6 +7672,9 @@ This code is for 768px and up
   font-size: 14px;
   color: #33aa33;
 }
+.submission_description pre {
+  white-space: pre-wrap;
+}
 .panel-frame {
   margin-top: 12px;
   margin-bottom: 24px;
