--- a/codalab/apps/web/static/less/main.less
+++ b/codalab/apps/web/static/less/main.less
@@ -343,3 +343,8 @@ This code is for 768px and up
    font-size: 14px;
    color: #33aa33;
 }
+.submission_description{
+  pre{
+    white-space: pre-wrap;
+  }
+}
