--- a/codalab/apps/web/templates/web/worksheets/detail.html
+++ b/codalab/apps/web/templates/web/worksheets/detail.html
@@ -115,6 +115,8 @@
     <script src="{{ STATIC_URL }}js/vendor/react-0.12.2.js"></script>
     <script src="{{ STATIC_URL }}js/vendor/jquery-editable-poshytip.js"></script>
     <script src="{{ STATIC_URL }}js/vendor/jquery.terminal-0.8.8_custom.min.js"></script>
+    <script src="{{ STATIC_URL }}js/vendor/jquery-ui.min.js"></script>
+    <script src="{{ STATIC_URL }}js/vendor/jquery.ui.chatbox.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-mousewheel/3.1.12/jquery.mousewheel.js"></script>
 
     {# TODO: remove JSX and move to deploy processing of JSX #}
@@ -127,6 +129,7 @@
     <script type="text/jsx" src="{{ STATIC_URL }}js/worksheet/ws_mixins.js"></script>
     {# ------- JSX FILES  ------- #}
     <script type="text/jsx" src="{{ STATIC_URL }}js/worksheet/worksheet_action_bar.js"></script>
+    <script type="text/jsx" src="{{ STATIC_URL }}js/worksheet/worksheet_help_bar.js"></script>
     <script type="text/jsx" src="{{ STATIC_URL }}js/worksheet/worksheet_side_panel.js"></script>
     {# bundle type renders/actions #}
     <script type="text/jsx" src="{{ STATIC_URL }}js/worksheet/contents_item_interface.js"></script>
