--- a/codalab/apps/web/templates/web/worksheets/detail.html
+++ b/codalab/apps/web/templates/web/worksheets/detail.html
@@ -77,6 +77,9 @@
                     <tr>
                       <td><kbd>?</kbd></td><td>Show keyboard shortcut help</td>
                     </tr>
+                    <tr>
+                        <a href="http://terminal.jcubic.pl/api_reference.php" target="_blank"> More shortcuts for web terminal (see Keyboard shortcuts section) </a>
+                    </tr>
                 </table>
             </div>
         </div>
