--- a/codalab/apps/web/static/less/chatbox.less
+++ b/codalab/apps/web/static/less/chatbox.less
@@ -1,8 +1,9 @@
 .ui-chatbox {
     position: fixed;
-    bottom:23px;
+    bottom: 23px;
     padding: 2px;
     background:  #CCCCCC;
+    font-size: 12px;
 }
 
 .ui-chatbox-titlebar {
