--- a/codalab/apps/web/templates/web/bundles/detail.html
+++ b/codalab/apps/web/templates/web/bundles/detail.html
@@ -23,7 +23,7 @@
 {% endblock js %}
 
 {% block jsincludes %}
-    <script src="{{ STATIC_URL }}js/vendor/react-0.12.2.js"></script>
+    <script src="{{ STATIC_URL }}bower_components/react/react.min.js"></script>
     {# TODO: remove JSX and move to deploy processing of JSX #}
     <script src="{{ STATIC_URL }}dist/worksheet_utils.js"></script>
     <script src="{{ STATIC_URL }}dist/bundle_interface.js"></script>
