--- a/codalab/apps/web/templates/web/worksheets/detail.html
+++ b/codalab/apps/web/templates/web/worksheets/detail.html
@@ -107,6 +107,10 @@
     {% endif %}
 
     {# https://cdnjs.cloudflare.com/ajax/libs/c3/0.4.10/c3.min.js #}
+    <script>
+      // Fix for poshytip: https://github.com/vitalets/x-editable/issues/496
+      $.fn.poshytip = { defaults: null };
+    </script>
     <link href="{{ STATIC_URL }}bower_components/c3/c3.min.css" rel="stylesheet" type="text/css">
     <script src="{{ STATIC_URL }}bower_components/d3/d3.min.js"></script>
     <script src="{{ STATIC_URL }}bower_components/c3/c3.min.js"></script>
