--- a/codalab/apps/web/templates/web/worksheets/detail.html
+++ b/codalab/apps/web/templates/web/worksheets/detail.html
@@ -138,6 +138,7 @@
     <script src="{{ STATIC_URL }}dist/table_item_interface.js"></script>
     <script src="{{ STATIC_URL }}dist/worksheet_item_interface.js"></script>
     <script src="{{ STATIC_URL }}dist/bundle_uploader.js"></script>
+    <script src="{{ STATIC_URL }}dist/run_bundle_builder.js"></script>
     <script src="{{ STATIC_URL }}dist/editable_field.js"></script>
     {# main entry point for the worksheet and its items/bundles #}
     <script src="{{ STATIC_URL }}dist/worksheet_items.js"></script>
