--- a/codalab/apps/web/static/less/worksheets.less
+++ b/codalab/apps/web/static/less/worksheets.less
@@ -866,3 +866,16 @@ html, body, #worksheet_container {height:100%;}
 .bundle-upload-progress-bar {
    width: 100%;
 }
+
+#run-bundle-builder-form {
+   position:fixed;
+   left: 50%;
+   top: 50%;
+   width: 500px;
+   height: 400px;
+   margin-top: -250px; 
+   margin-left: -200px; 
+   background-color:@gray-light;
+   display: none;
+   z-index: 200;
+}
